--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -23,6 +23,7 @@
   }
   @media all and (max-width: 500px) {
     display: block;
+    min-height: 10em;
   }
 }
 
